--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     { name: "philipp",   img: "philipppic.jpg",   sounds: ["philipp1.mp3", "philipp2.mp3"] },
     { name: "franzi",    img: "franzipic.jpg",    sounds: ["franzi1.mp3"] },
     { name: "lutz",    img: "lutzpic.jpg",    sounds: ["lutz1.mp3", "lutz2.mp3"] },
-    { name: "john",   img: "johnpic.jpg",   sounds: ["john1.mp3"] },
+    { name: "john",   img: "johnypic.jpg",   sounds: ["john1.mp3"] },
     { name: "evi",   img: "evipic.jpg",   sounds: ["evi1.mp3", "evi2.mp3"] },
-    { name: "papa",   img: "papapic.jpg",   sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
-    { name: "mama",   img: "mamapic.jpg",   sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] },
+    { name: "papa",   img: "vaterpic.jpg",   sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
+    { name: "mama",   img: "mutterpic.jpg",   sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] },
   ];
 
   function spawnPerson() {
