--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <script>
   const persons = [
-    { name: "franni", img: "Frannipic.jpg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
+    { name: "franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
     { name: "philipp",   img: "Philipppic.jpg",   sounds: ["philipp1.mp3", "philipp2.mp3"] },
     { name: "franzi",    img: "Franzipic.jpg",    sounds: ["franzi1.mp3"] },
     { name: "lutz",    img: "Lutzpic.jpg",    sounds: ["lutz1.mp3", "lutz2.mp3"] },
