--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     { name: "franzi",    img: "Franzipic.jpg",    sounds: ["Franzi1.ogg"] },
     { name: "lutz",    img: "Lutzpic.jpg",    sounds: ["lutz1.mp3", "lutz2.mp3"] },
     { name: "john",   img: "Johnypic.jpg",   sounds: ["john1.mp3"] },
-    { name: "evi",   img: "Evipic.jpg",   sounds: ["Evi1.mp3", "evi2.mp3"] },
+    { name: "evi",   img: "Evipic.jpg",   sounds: ["Evi1.mp3"] },
     { name: "papa",   img: "Vaterpic.jpg",   sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
     { name: "mama",   img: "Mutterpic.jpg",   sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] },
   ];
