--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script>
   const persons = [
     { name: "franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
-    { name: "philipp",   img: "Philipppic.jpg",   sounds: ["philipp1.mp3", "philipp2.mp3"] },
+    { name: "philipp",   img: "Philipppic.jpg",   sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3"] },
     { name: "franzi",    img: "Franzipic.jpg",    sounds: ["Franzi1.ogg"] },
     { name: "lutz",    img: "Lutzpic.jpg",    sounds: ["lutz1.mp3", "lutz2.mp3"] },
     { name: "john",   img: "Johnypic.jpg",   sounds: ["john1.mp3"] },
