--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { margin: 0; overflow: hidden; background: skyblue; }
-    
+   <div id="score">Punkte: 0</div> 
      #score {
       position: fixed;
       top: 10px;
