--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { margin: 0; overflow: hidden; background: skyblue; }
+    body {
+  margin: 0;
+  overflow: hidden;
+  background-image: url("hintergrund.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
      #score {
       position: fixed;
       top: 10px;
