--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <div id="target">Klick auf: ???</div>
+  <div id="target">WO IST: ???</div>
  <div id="score">Punkte: 0</div>
   
 <script>
@@ -71,14 +71,14 @@
     }
   
   const persons = [
-    { name: "franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
-    { name: "philipp",   img: "Philipppic.jpg",   sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3"] },
-    { name: "franzi",    img: "Franzipic.jpg",    sounds: ["Franzi1.ogg"] },
-    { name: "lutz",    img: "Lutzpic.jpg",    sounds: ["lutz1.mp3", "lutz2.mp3"] },
-    { name: "john",   img: "Johnypic.jpg",   sounds: ["John1.mp3"] },
-    { name: "evi",   img: "Evipic.jpg",   sounds: ["Evi1.mp3"] },
-    { name: "papa",   img: "Vaterpic.jpg",   sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
-    { name: "mama",   img: "Mutterpic.jpg",   sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] },
+    { name: "Franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
+    { name: "Philipp",   img: "Philipppic.jpg",   sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3"] },
+    { name: "Franzi",    img: "Franzipic.jpg",    sounds: ["Franzi1.ogg"] },
+    { name: "Lutz",    img: "Lutzpic.jpg",    sounds: ["lutz1.mp3", "lutz2.mp3"] },
+    { name: "John",   img: "Johnypic.jpg",   sounds: ["John1.mp3"] },
+    { name: "Evi",   img: "Evipic.jpg",   sounds: ["Evi1.mp3"] },
+    { name: "Papa",   img: "Vaterpic.jpg",   sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
+    { name: "Mama",   img: "Mutterpic.jpg",   sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] },
   ];
 
   function spawnPerson() {
