--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
    function setNewTarget() {
       currentTarget = persons[Math.floor(Math.random() * persons.length)];
-      document.getElementById("target").innerText = "Klick auf: " + currentTarget.name;
+      document.getElementById("target").innerText = "WO IST DENN: " + currentTarget.name;
     }
   
   const persons = [
