--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <script>
     const music = document.getElementById("background-music");
-    music.volume = 0.3;
+    music.volume = 0.1;
 
     const musicToggle = document.getElementById("music-toggle");
     musicToggle.addEventListener("click", () => {
@@ -141,4 +141,140 @@
     const persons = [
       { name: "Franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
       { name: "Philipp", img: "Philipppic.jpg", sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3"] },
-      { name: "Franzi", img: "F
+      { name: "Franzi", img: "Franzipic.jpg", sounds: ["Franzi1.ogg"] },
+      { name: "Lutz", img: "Lutzpic.jpg", sounds: ["lutz1.mp3", "lutz2.mp3"] },
+      { name: "John", img: "Johnypic.jpg", sounds: ["John1.mp3"] },
+      { name: "Evi", img: "Evipic.jpg", sounds: ["Evi1.mp3"] },
+      { name: "Papa", img: "Vaterpic.jpg", sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
+      { name: "Mama", img: "Mutterpic.jpg", sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] },
+    ];
+
+    function updateScore() {
+      document.getElementById("score").innerText = "Punkte: " + score;
+    }
+
+    function updateTimer() {
+      document.getElementById("timer").innerText = "Zeit: " + timeLeft;
+    }
+
+    function setNewTarget() {
+      currentTarget = persons[Math.floor(Math.random() * persons.length)];
+      document.getElementById("target").innerText = "WO IST DENN: " + currentTarget.name;
+    }
+
+    function getSpawnSpeed() {
+      return Math.max(150, 1200 - score * 50);
+    }
+
+    function getMoveSpeed() {
+      return Math.min(15, 1.5 + score * 0.6);
+    }
+
+    function getSpawnCount() {
+      return Math.floor(Math.random() * 5) + 3;
+    }
+
+    function spawnWave() {
+      if (gameOver) return;
+      for (let i = 0; i < getSpawnCount(); i++) {
+        spawnPerson();
+      }
+    }
+
+    function spawnPerson() {
+      if (gameOver) return;
+
+      const person = persons[Math.floor(Math.random() * persons.length)];
+      const img = document.createElement("img");
+      img.src = person.img;
+      img.className = "face";
+      img.style.left = Math.random() * (window.innerWidth - 100) + "px";
+      img.style.top = window.innerHeight + "px";
+      document.body.appendChild(img);
+
+      const speed = getMoveSpeed();
+      const move = setInterval(() => {
+        const top = parseFloat(img.style.top);
+        if (top < -120) {
+          img.remove();
+          clearInterval(move);
+        } else {
+          img.style.top = (top - speed) + "px";
+        }
+      }, 20);
+
+      img.addEventListener("click", () => {
+        if (gameOver) return;
+
+        img.remove();
+        clearInterval(move);
+
+        if (person.name === currentTarget.name) {
+          const sound = person.sounds[Math.floor(Math.random() * person.sounds.length)];
+          new Audio(sound).play();
+          score++;
+          updateScore();
+          setNewTarget();
+
+          clearInterval(spawnInterval);
+          spawnInterval = setInterval(spawnWave, getSpawnSpeed());
+        } else {
+          endGame();
+        }
+      });
+    }
+
+    function startTimer() {
+      updateTimer();
+      timerInterval = setInterval(() => {
+        timeLeft--;
+        updateTimer();
+        if (timeLeft <= 0) {
+          clearInterval(timerInterval);
+          endGame();
+        }
+      }, 1000);
+    }
+
+    function endGame() {
+      gameOver = true;
+      clearInterval(spawnInterval);
+      clearInterval(timerInterval);
+      if (score > highscore) {
+        highscore = score;
+        localStorage.setItem("highscore", highscore);
+      }
+      document.getElementById("gameover-score").innerHTML = `Punkte: ${score} <br> Highscore: ${highscore}`;
+      document.getElementById("gameover-screen").style.display = "block";
+    }
+
+    function restartGame() {
+      document.querySelectorAll(".face").forEach(el => el.remove());
+      score = 0;
+      timeLeft = 30;
+      gameOver = false;
+      updateScore();
+      updateTimer();
+      setNewTarget();
+      document.getElementById("gameover-screen").style.display = "none";
+      spawnInterval = setInterval(spawnWave, getSpawnSpeed());
+      startTimer();
+    }
+
+    function startGame() {
+      setNewTarget();
+      updateScore();
+      updateTimer();
+      spawnInterval = setInterval(spawnWave, getSpawnSpeed());
+      startTimer();
+    }
+    startGame();
+
+    document.body.addEventListener("click", function startMusicOnce() {
+      music.play().catch(err => console.log("Autoplay blockiert:", err));
+      document.body.removeEventListener("click", startMusicOnce);
+    });
+  </script>
+
+</body>
+</html>
