--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     const persons = [
       { name: "Franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
-      { name: "Philipp", img: "Philipppic.jpg", sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3"] },
+      { name: "Philipp", img: "Philipppic.jpg", sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3", "Philipp5.mp3"] },
       { name: "Franzi", img: "Franzipic.jpg", sounds: ["Franzi1.ogg"] },
       { name: "Lutz", img: "Lutzpic.jpg", sounds: ["lutz1.mp3", "lutz2.mp3"] },
       { name: "John", img: "Johnypic.jpg", sounds: ["John1.mp3"] },
